--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           min-height: 100vh;
         "
       >
-        <div class="container text-dark">
+        <div class="container text-white">
             <div class="card rounded-pill p-2 m-2 bg-danger">
             <div class="row justify-content-center">
               <div class="col-md-8 col-10 text-center mt-5">
@@ -268,12 +268,12 @@
                 </p>
                 <div class="social-icons" style="font-size: 1.4rem">
                   <a href="#">
-                    <button class="btn btn-danger shadow rounded-pill my-3">
+                    <button class="btn btn-light shadow rounded-pill my-3">
                       TikTok <i class="fab fa-tiktok"></i>
                     </button>
                   </a>
                   <a href="#">
-                    <button class="btn btn-danger shadow rounded-pill my-3">
+                    <button class="btn btn-light shadow rounded-pill my-3">
                       Instagram <i class="fab fa-instagram"></i>
                     </button>
                   </a>
