--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           min-height: 100vh;
         "
       >
-        <div class="container text-light">
+        <div class="container text-white">
             <div class="card rounded-pill p-2 m-2 bg-danger">
             <div class="row justify-content-center">
               <div class="col-md-8 col-10 text-center mt-5">
