--- a/index.html
+++ b/index.html
@@ -190,99 +190,100 @@
         </div>
       </section>
 
-      <section
-        class="couple"
-        id="mempelai"
-        style="
-          background-image: url('images/gam3.jpg');
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          min-height: 100vh;
-        "
+<section
+  class="couple"
+  id="mempelai"
+  style="
+    background-image: url('images/gam3.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    color: white; /* Menambahkan properti color untuk mengubah warna teks menjadi putih */
+  "
+>
+  <div class="container text-light">
+    <div class="card rounded-pill p-2 m-2 bg-danger">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-10 text-center mt-5">
+          <img
+            src="images/rose.png"
+            alt="Save The Date"
+            width="100"
+            height="100"
+            data-aos="zoom-in"
+            data-aos-duration="1500"
+          />
+          <h1 class="mb-3" style="font-size: 1.2rem">
+            Assalamuallaikum Warahmatullahi Wabarakatuh
+          </h1>
+          <p class="mb-0" style="font-size: 1.2rem">
+            Kami mengundang Bapak/Ibu/Saudara/i serta kerabat sekalian
+            untuk menghadiri acara pernikahan kami:
+          </p>
+        </div>
+      </div>
+      <div
+        class="row justify-content-center my-4"
+        data-aos="fade-up"
+        data-aos-duration="1500"
       >
-        <div class="container text-light">
-            <div class="card rounded-pill p-2 m-2 bg-danger">
-            <div class="row justify-content-center">
-              <div class="col-md-8 col-10 text-center mt-5">
-                <img
-                  src="images/rose.png"
-                  alt="Save The Date"
-                  width="100"
-                  height="100"
-                  data-aos="zoom-in"
-                  data-aos-duration="1500"
-                />
-                <h1 class="mb-3" style="font-size: 1.2rem">
-                  Assalamuallaikum Warahmatullahi Wabarakatuh
-                </h1>
-                <p class="mb-0" style="font-size: 1.2rem">
-                  Kami mengundang Bapak/Ibu/Saudara/i serta kerabat sekalian
-                  untuk menghadiri acara pernikahan kami:
-                </p>
-              </div>
-            </div>
-            <div
-              class="row justify-content-center my-4"
-              data-aos="fade-up"
-              data-aos-duration="1500"
-            >
-              <div class="col-md-6 text-center">
-                <img
-                  src="assets/images/cowo.png"
-                  alt="Mempelai Pria"
-                  class="img-fluid rounded-pill my-3"
-                  style="max-width: 200px"
-                />
-                <h2 class="font-custom">Ahmad Syarifuddin</h2>
-                <p style="font-size: 1.2rem">
-                  Putra Pertama Bapak Ahmad & Ibu Noviyanti
-                </p>
-                <div class="social-icons" style="font-size: 1.4rem">
-                  <a href="#">
-                    <button class="btn btn-light shadow rounded-pill my-3">
-                      TikTok <i class="fab fa-tiktok"></i>
-                    </button>
-                  </a>
-                  <a href="#">
-                    <button class="btn btn-light shadow rounded-pill my-3">
-                      Instagram <i class="fab fa-instagram"></i>
-                    </button>
-                  </a>
-                </div>
-              </div>
-              <div
-                class="col-md-6 text-center"
-                data-aos="fade-up"
-                data-aos-duration="1500"
-              >
-                <img
-                  src="assets/images/cewe.png"
-                  alt="Mempelai Wanita"
-                  class="img-fluid rounded-pill my-3"
-                  style="max-width: 200px"
-                />
-                <h2 class="font-custom">Syarifah Putri As-syifa</h2>
-                <p style="font-size: 1.2rem">
-                  Putri Kedua Bapak Ahmad Fikri & Ibu Putri
-                </p>
-                <div class="social-icons" style="font-size: 1.4rem">
-                  <a href="#">
-                    <button class="btn btn-light shadow rounded-pill my-3">
-                      TikTok <i class="fab fa-tiktok"></i>
-                    </button>
-                  </a>
-                  <a href="#">
-                    <button class="btn btn-light shadow rounded-pill my-3">
-                      Instagram <i class="fab fa-instagram"></i>
-                    </button>
-                  </a>
-                </div>
-              </div>
-            </div>
+        <div class="col-md-6 text-center">
+          <img
+            src="assets/images/cowo.png"
+            alt="Mempelai Pria"
+            class="img-fluid rounded-pill my-3"
+            style="max-width: 200px"
+          />
+          <h2 class="font-custom">Ahmad Syarifuddin</h2>
+          <p style="font-size: 1.2rem">
+            Putra Pertama Bapak Ahmad & Ibu Noviyanti
+          </p>
+          <div class="social-icons" style="font-size: 1.4rem">
+            <a href="#">
+              <button class="btn btn-light shadow rounded-pill my-3">
+                TikTok <i class="fab fa-tiktok"></i>
+              </button>
+            </a>
+            <a href="#">
+              <button class="btn btn-light shadow rounded-pill my-3">
+                Instagram <i class="fab fa-instagram"></i>
+              </button>
+            </a>
           </div>
         </div>
-      </section>
+        <div
+          class="col-md-6 text-center"
+          data-aos="fade-up"
+          data-aos-duration="1500"
+        >
+          <img
+            src="assets/images/cewe.png"
+            alt="Mempelai Wanita"
+            class="img-fluid rounded-pill my-3"
+            style="max-width: 200px"
+          />
+          <h2 class="font-custom">Syarifah Putri As-syifa</h2>
+          <p style="font-size: 1.2rem">
+            Putri Kedua Bapak Ahmad Fikri & Ibu Putri
+          </p>
+          <div class="social-icons" style="font-size: 1.4rem">
+            <a href="#">
+              <button class="btn btn-light shadow rounded-pill my-3">
+                TikTok <i class="fab fa-tiktok"></i>
+              </button>
+            </a>
+            <a href="#">
+              <button class="btn btn-light shadow rounded-pill my-3">
+                Instagram <i class="fab fa-instagram"></i>
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
       <!-- Date Section -->
       <section id="date" class="date">
