--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     background-position: center;
     background-repeat: no-repeat;
     min-height: 100vh;
-    color: white; /* Menambahkan properti color untuk mengubah warna teks menjadi putih */
+    color: white !important; /* Menambahkan properti !important untuk memastikan warna teks menjadi putih */
   "
 >
   <div class="container text-light">
@@ -267,7 +267,7 @@
           <p style="font-size: 1.2rem">
             Putri Kedua Bapak Ahmad Fikri & Ibu Putri
           </p>
-          <div class="social-icons" style="font-size: 1.4rem">
+          <div class "social-icons" style="font-size: 1.4rem">
             <a href="#">
               <button class="btn btn-light shadow rounded-pill my-3">
                 TikTok <i class="fab fa-tiktok"></i>
